test/spec_vectors/align/ok/module_13.wat
(module (memory 0) (func (drop (f64.load align=8 (i32.const 0)))))