test/spec_vectors/align/fail/module_96.wat
(module (memory 0) (func (drop (f64.load align=16 (i32.const 0)))))